--- a/style.css
+++ b/style.css
@@ -158,7 +158,7 @@ a, a:active, a:hover {
     justify-content: center;
     align-items: center;
     padding: .3rem;
-    background: url(assets/earth.svg);
+    /*background: url(assets/earth.svg);*/
     border-radius: 50%;
 }
 
